--- a/Week3.ipynb
+++ b/Week3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPODOSmeER10fpCx5SOf0qu",
+      "authorship_tag": "ABX9TyNY6ddctltHHp5OF6wSS6y1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "nama  : Alfan Marcel M <br>\n",
-        "Absen : 08 <br>\n",
-        "kelas : TI-3A <br>\n",
-        "NIM   : 2141720266"
+        "Kelompok 1 : <br>\n",
+        "Achmad Aly A/02/2141720039 <br>\n",
+        "Alfan Marcel M/08/2141720266 <br>\n",
+        "M Rifat Anwar/23/214172006 <br>\n"
       ],
       "metadata": {
         "id": "ljqYj0pPef4n"
@@ -102,7 +102,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 325
+          "height": 328
         },
         "id": "fH-7nbd9jpsv",
         "outputId": "ce2c2906-96c6-4f67-8d80-668b47340dcc"
@@ -169,7 +169,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 309
+          "height": 346
         },
         "id": "TnudgqzkJbyr",
         "outputId": "d88007c1-15ca-4f63-f89f-f8e7ce184e2d"
