--- a/Week5.ipynb
+++ b/Week5.ipynb
@@ -16,7 +16,7 @@
         "id": "fQPwA-6Qc-P8"
       },
       "source": [
-        "Kelompok 1 :\n",
+        "Kelompok 1 : <br>\n",
         "Achmad Aly A/02/2141720039 <br>\n",
         "Alfan Marcel M/08/2141720266 <br>\n",
         "M Rifat Anwar/23/214172006"
@@ -345,7 +345,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 243
+          "height": 261
         },
         "id": "5RNqHE3TjNc7",
         "outputId": "7f49aba4-e830-4330-c7cd-b021d49ea0bc"
@@ -392,7 +392,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 243
+          "height": 261
         },
         "outputId": "2cecc3c0-7661-4c96-f9b2-917d3912a510",
         "id": "rpW--gXRlzlW"
@@ -439,7 +439,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 243
+          "height": 261
         },
         "outputId": "339abad0-1a63-466d-c038-1d1f3f92ed69",
         "id": "olIUQkwnmO17"
@@ -486,7 +486,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 243
+          "height": 261
         },
         "outputId": "51e90b9f-86b8-4b44-9c4c-75ed1d51b7dd",
         "id": "FlbyQJkKmr-5"
@@ -533,7 +533,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 243
+          "height": 261
         },
         "id": "fto-_97Um2_N",
         "outputId": "0b36aa9d-5b3e-455e-958b-531a0536b39d"
@@ -570,7 +570,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOj08YyeWbtXW3oRLHnjg7C",
+      "authorship_tag": "ABX9TyN5ipX5XoYwNOK5eBofQOI0",
       "include_colab_link": true
     },
     "kernelspec": {
